G1.03 Az első oszlop szélessége automatikus

--- a/03-03-01-grid-and-simple-binding/MainWindow.xaml
+++ b/03-03-01-grid-and-simple-binding/MainWindow.xaml
@@ -11,6 +11,10 @@
     A Grid rácsot jelent, sorai és oszlopai vannak
     -->
     <Grid>
+        <!-- G1.03 Az első oszlop szélessége automatikus -->
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
 
     </Grid>
 </Window>
