G1.04 Az első sor magassága automatikus

--- a/03-03-01-grid-and-simple-binding/MainWindow.xaml
+++ b/03-03-01-grid-and-simple-binding/MainWindow.xaml
@@ -15,6 +15,9 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-
+        <!-- G1.04 Az első sor magassága automatikus -->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
     </Grid>
 </Window>
