G1.07 Az első sor második osszlopába egy beviteli mező van

--- a/03-03-01-grid-and-simple-binding/MainWindow.xaml
+++ b/03-03-01-grid-and-simple-binding/MainWindow.xaml
@@ -24,5 +24,7 @@
 
         <!-- G1.05 Az első sor első osszlopába egy felirat van -->
         <TextBlock x:Name="tbNev" Grid.Row="0" Grid.Column="0">Név:</TextBlock>
+        <!-- G1.07 Az első sor második osszlopába egy beviteli mező van -->
+        <TextBox x:Name="txtNev" Grid.Row="0" Grid.Column="1"  />
     </Grid>
 </Window>
