--- a/03-03-01-grid-and-simple-binding/MainWindow.xaml
+++ b/03-03-01-grid-and-simple-binding/MainWindow.xaml
@@ -31,5 +31,9 @@
         <TextBlock x:Name="tbNev" Grid.Row="0" Grid.Column="0">Név:</TextBlock>
         <!-- G1.07 Az első sor második osszlopába egy beviteli mező van -->
         <TextBox x:Name="txtNev" Grid.Row="0" Grid.Column="1"  />
+        <!-- G1.09 A második sor első osszlopába egy felirat van -->
+        <TextBlock x:Name="tbSuly" Grid.Row="1" Grid.Column="0">Súly:</TextBlock>
+        <!-- G1.10 A második sor második osszlopába egy beviteli mező van -->
+        <TextBox x:Name="txtSuly" Grid.Row="1" Grid.Column="1"/>
     </Grid>
 </Window>
