--- a/03-03-01-grid-and-simple-binding/MainWindow.xaml
+++ b/03-03-01-grid-and-simple-binding/MainWindow.xaml
@@ -35,5 +35,7 @@
         <TextBlock x:Name="tbSuly" Grid.Row="1" Grid.Column="0">Súly:</TextBlock>
         <!-- G1.10 A második sor második osszlopába egy beviteli mező van -->
         <TextBox x:Name="txtSuly" Grid.Row="1" Grid.Column="1"/>
+        <!-- G1.11 A harmadik sor első osszlopába egy felirat van -->
+        <TextBlock x:Name="tbMagassag" Grid.Row="2" Grid.Column="0">Magasság:</TextBlock>
     </Grid>
 </Window>
