--- a/03-03-01-grid-and-simple-binding/MainWindow.xaml
+++ b/03-03-01-grid-and-simple-binding/MainWindow.xaml
@@ -37,5 +37,7 @@
         <TextBox x:Name="txtSuly" Grid.Row="1" Grid.Column="1"/>
         <!-- G1.11 A harmadik sor első osszlopába egy felirat van -->
         <TextBlock x:Name="tbMagassag" Grid.Row="2" Grid.Column="0">Magasság:</TextBlock>
+        <!-- G1.12 A harmadik sor második osszlopába egy beviteli mező van -->
+        <TextBox x:Name="txtMagassag" Grid.Row="2" Grid.Column="1"/>
     </Grid>
 </Window>
