--- a/03-03-01-grid-and-simple-binding/MainWindow.xaml
+++ b/03-03-01-grid-and-simple-binding/MainWindow.xaml
@@ -39,5 +39,8 @@
         <TextBlock x:Name="tbMagassag" Grid.Row="2" Grid.Column="0">Magasság:</TextBlock>
         <!-- G1.12 A harmadik sor második osszlopába egy beviteli mező van -->
         <TextBox x:Name="txtMagassag" Grid.Row="2" Grid.Column="1"/>
+        <!-- G1.13 A negyedik sor első osszlopába egy felirat van -->
+        <TextBlock x:Name="tbTTI" Grid.Row="3" Grid.Column="0" Margin="0 0 10 0">Testtömeg index:</TextBlock>
+
     </Grid>
 </Window>
