--- a/03-03-01-grid-and-simple-binding/MainWindow.xaml
+++ b/03-03-01-grid-and-simple-binding/MainWindow.xaml
@@ -41,6 +41,8 @@
         <TextBox x:Name="txtMagassag" Grid.Row="2" Grid.Column="1"/>
         <!-- G1.13 A negyedik sor első osszlopába egy felirat van -->
         <TextBlock x:Name="tbTTI" Grid.Row="3" Grid.Column="0" Margin="0 0 10 0">Testtömeg index:</TextBlock>
+        <!-- G1.14 A negyedik sor második osszlopába egy csak olvasható beviteli mező van -->
+        <TextBox x:Name="txtTTI" Grid.Row="3" Grid.Column="1" IsReadOnly="True"/>
 
     </Grid>
 </Window>
