G1.16 A negyedik sor második osszlopába egy csak olvasható beviteli mező van amelyben a szöveg tördelhető

--- a/03-03-01-grid-and-simple-binding/MainWindow.xaml
+++ b/03-03-01-grid-and-simple-binding/MainWindow.xaml
@@ -45,7 +45,7 @@
         <TextBox x:Name="txtTTI" Grid.Row="3" Grid.Column="1" IsReadOnly="True"/>
         <!-- G1.15 Az ötödik sor első osszlopába egy felirat van -->
         <TextBlock x:Name="tbBetegAdatok" Grid.Row="4" Grid.Column="0" Margin="0 0 10 0">Beteg adatok:</TextBlock>
-
-
+        <!-- G1.16 A negyedik sor második osszlopába egy csak olvasható beviteli mező van amelyben a szöveg tördelhető -->
+        <TextBox x:Name="txtBetegAdatok" Grid.Row="4" Grid.Column="1" TextWrapping="Wrap"/>
     </Grid>
 </Window>
