--- a/03-03-01-grid-and-simple-binding/MainWindow.xaml
+++ b/03-03-01-grid-and-simple-binding/MainWindow.xaml
@@ -47,6 +47,9 @@
         <!-- G1.15 Az ötödik sor első osszlopába egy felirat van -->
         <TextBlock x:Name="tbBetegAdatok" Grid.Row="4" Grid.Column="0" Margin="0 0 10 0">Beteg adatok:</TextBlock>
         <!-- G1.16 A negyedik sor második osszlopába egy csak olvasható beviteli mező van amelyben a szöveg tördelhető -->
-        <TextBox x:Name="txtBetegAdatok" Grid.Row="4" Grid.Column="1" TextWrapping="Wrap" Margin="1 1 1 1"/>
+        <!-- G1.26 Hozzákötjük a BetegAdatok tulajdonságot a txtBetegAdatok vezérlőhöz és csak olvashatóvá teszük-->
+        <TextBox x:Name="txtBetegAdatok" Grid.Row="4" Grid.Column="1" IsReadOnly="True" TextWrapping="Wrap" Margin="1 1 1 1"
+                 Text="{Binding BetegAdatok, Mode=OneWay}"         
+        />
     </Grid>
 </Window>
