--- a/03-03-01-grid-and-simple-binding/MainWindow.xaml
+++ b/03-03-01-grid-and-simple-binding/MainWindow.xaml
@@ -43,7 +43,10 @@
         <!-- G1.13 A negyedik sor első osszlopába egy felirat van -->
         <TextBlock x:Name="tbTTI" Grid.Row="3" Grid.Column="0" Margin="0 0 10 0">Testtömeg index:</TextBlock>
         <!-- G1.14 A negyedik sor második osszlopába egy csak olvasható beviteli mező van -->
-        <TextBox x:Name="txtTTI" Grid.Row="3" Grid.Column="1" IsReadOnly="True" Margin="1 1 1 1"/>
+        <!-- G1.27 Hozzákötjük a TTI tulajdonságot a txtTTI vezérlőhöz -->
+        <TextBox x:Name="txtTTI" Grid.Row="3" Grid.Column="1" IsReadOnly="True" Margin="1 1 1 1"
+                 Text="{Binding TTI, Mode=OneWay}"
+        />
         <!-- G1.15 Az ötödik sor első osszlopába egy felirat van -->
         <TextBlock x:Name="tbBetegAdatok" Grid.Row="4" Grid.Column="0" Margin="0 0 10 0">Beteg adatok:</TextBlock>
         <!-- G1.16 A negyedik sor második osszlopába egy csak olvasható beviteli mező van amelyben a szöveg tördelhető -->
