--- a/03-03-01-grid-and-simple-binding/MainWindow.xaml
+++ b/03-03-01-grid-and-simple-binding/MainWindow.xaml
@@ -38,7 +38,10 @@
         <!-- G1.09 A második sor első osszlopába egy felirat van -->
         <TextBlock x:Name="tbSuly" Grid.Row="1" Grid.Column="0">Súly:</TextBlock>
         <!-- G1.10 A második sor második osszlopába egy beviteli mező van -->
-        <TextBox x:Name="txtSuly" Grid.Row="1" Grid.Column="1" Margin="1 1 1 1"/>
+        <!-- G1.29 Hozzákötjük a Suly tulajdonságot a txtSuly vezérlőhöz -->
+        <TextBox x:Name="txtSuly" Grid.Row="1" Grid.Column="1" Margin="1 1 1 1" 
+                 Text="{Binding Suly, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+        />
         <!-- G1.11 A harmadik sor első osszlopába egy felirat van -->
         <TextBlock x:Name="tbMagassag" Grid.Row="2" Grid.Column="0">Magasság:</TextBlock>
         <!-- G1.12 A harmadik sor második osszlopába egy beviteli mező van -->
