--- a/03-03-01-grid-and-simple-binding/MainWindow.xaml
+++ b/03-03-01-grid-and-simple-binding/MainWindow.xaml
@@ -45,7 +45,10 @@
         <!-- G1.11 A harmadik sor első osszlopába egy felirat van -->
         <TextBlock x:Name="tbMagassag" Grid.Row="2" Grid.Column="0">Magasság:</TextBlock>
         <!-- G1.12 A harmadik sor második osszlopába egy beviteli mező van -->
-        <TextBox x:Name="txtMagassag" Grid.Row="2" Grid.Column="1" Margin="1 1 1 1"/>
+        <!-- G1.30 Hozzákötjük a Magassag tulajdonságot a txtMagassag vezérlőhöz -->
+        <TextBox x:Name="txtMagassag" Grid.Row="2" Grid.Column="1" Margin="1 1 1 1"
+                 Text="{Binding Magassag, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+         />
         <!-- G1.13 A negyedik sor első osszlopába egy felirat van -->
         <TextBlock x:Name="tbTTI" Grid.Row="3" Grid.Column="0" Margin="0 0 10 0">Testtömeg index:</TextBlock>
         <!-- G1.14 A negyedik sor második osszlopába egy csak olvasható beviteli mező van -->
