--- a/03-03-02-mvvm-stackpanel-binding/ProjectWPFSquare/View/MainWindow.xaml
+++ b/03-03-02-mvvm-stackpanel-binding/ProjectWPFSquare/View/MainWindow.xaml
@@ -13,6 +13,7 @@
         <TextBlock x:Name="tbSuareSide"  Margin="20 10 20 0">A négyzet oldala:</TextBlock>
         <TextBlock x:Name="tbPerimeter" Margin="30 10 30 0">A négyzet kerülete:</TextBlock>
         <TextBlock x:Name="tbArea" Margin="30 10 30 0">A négyzet területe:</TextBlock>
-        <Button x:Name="btnExit" Margin="250 10 30 5">Kilépés</Button>
+        <!-- MVVM.14 Programból való kilépés működik -->
+        <Button x:Name="btnExit" Margin="250 10 30 5" Click="btnExit_Click">Kilépés</Button>
     </StackPanel>
 </Window>
