--- a/TTIProject/MainWindow.xaml
+++ b/TTIProject/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:TTIProject"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Margin="20 10 20 30">
 
     </Grid>
 </Window>
