--- a/TTIProject/MainWindow.xaml
+++ b/TTIProject/MainWindow.xaml
@@ -48,7 +48,20 @@
                  Margin="1 1 1 1"
                  Text="{Binding Magassag, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                  />
-        <TextBox x:Name="txtTTI" Grid.Row="3" Grid.Column="1" Margin="1 1 1 1"/>
-        <TextBox x:Name="txtBetegAdatok" Grid.Row="4" Grid.Column="1" IsReadOnly="True" TextWrapping="Wrap" Margin="1 1 1 1"/>
+        <TextBox x:Name="txtTTI" 
+                 Grid.Row="3" 
+                 Grid.Column="1" 
+                 IsReadOnly="True" 
+                 Margin="1 1 1 1"
+                 Text="{Binding TTI, Mode=OneWay}"
+                 />
+        <TextBox x:Name="txtBetegAdatok" 
+                 Grid.Row="4" 
+                 Grid.Column="1" 
+                 IsReadOnly="True" 
+                 TextWrapping="Wrap" 
+                 Margin="1 1 1 1"
+                 Text="{Binding BetegAdatok, Mode=OneWay}"
+                 />
     </Grid>
 </Window>
